--- a/quiz_game/WebContent/WEB-INF/web.xml
+++ b/quiz_game/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
  <display-name>quiz_game</display-name>
  <context-param>
   <param-name>primefaces.THEME</param-name>
-  <param-value>south-street</param-value>
+  <param-value>le-frog</param-value>
  </context-param>
  <servlet>
   <servlet-name>Faces Servlet</servlet-name>
