--- a/quiz_game/WebContent/WEB-INF/web.xml
+++ b/quiz_game/WebContent/WEB-INF/web.xml
@@ -7,6 +7,15 @@
   <param-name>primefaces.THEME</param-name>
   <param-value>le-frog</param-value>
  </context-param>
+ 
+ <context-param>
+  <param-name>javax.faces.PARTIAL_STATE_SAVING</param-name>
+  <param-value>false</param-value>
+ </context-param> 
+ <context-param>
+  <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+  <param-value>server</param-value>
+ </context-param>
  <servlet>
   <servlet-name>Faces Servlet</servlet-name>
   <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
